corrected the error in the click event on desktop and mobile view

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <div>
         <div class="navitem">
           <ul class="firstItem">
-            <li class="features featuresOpen">Features <ion-icon name="chevron-down-outline"></ion-icon></li>
-            <li class="features featuresClose hidden">Features <ion-icon name="chevron-up-outline"></ion-icon></li>
-            <ul class="drop1 hidden">
+            <li class="features featuresOpenMobile">Features <ion-icon name="chevron-down-outline"></ion-icon></li>
+            <li class="features featuresCloseMobile hidden">Features <ion-icon name="chevron-up-outline"></ion-icon></li>
+            <ul class="drop1Mobile hidden">
               <li>
                 <img src="images/icon-todo.svg" alt="a todo icon">
                 <a href="#">Todo list</a>
@@ -52,9 +52,9 @@
 
         <div class="navitem">
           <ul>
-            <li class="company companyOpen">Company <ion-icon name="chevron-down-outline"></ion-icon></li>
-            <li class="company companyClose hidden">Company <ion-icon name="chevron-up-outline"></ion-icon></li>
-            <ul class="drop2 hidden">
+            <li class="company companyOpenMobile">Company <ion-icon name="chevron-down-outline"></ion-icon></li>
+            <li class="company companyCloseMobile hidden">Company <ion-icon name="chevron-up-outline"></ion-icon></li>
+            <ul class="drop2Mobile hidden">
               <li><a href="#">History</a></li>
               <li><a href="#">Our Team</a></li>
               <li><a href="#">Blog</a></li>
@@ -81,9 +81,9 @@
         <div>
           <div class="navitem">
             <ul class="firstItem">
-              <li class="features featuresOpen">Features <ion-icon name="chevron-down-outline"></ion-icon></li>
-              <li class="features featuresClose hidden">Features <ion-icon name="chevron-up-outline"></ion-icon></li>
-              <ul class="drop1 hidden">
+              <li class="features featuresOpenDesktop">Features <ion-icon name="chevron-down-outline"></ion-icon></li>
+              <li class="features featuresCloseDesktop hidden">Features <ion-icon name="chevron-up-outline"></ion-icon></li>
+              <ul class="drop1Desktop hidden">
                 <li>
                   <img src="images/icon-todo.svg" alt="a todo icon">
                   <a href="#">Todo list</a>
@@ -109,9 +109,9 @@
 
           <div class="navitem">
             <ul>
-              <li class="company companyOpen">Company <ion-icon name="chevron-down-outline"></ion-icon></li>
-              <li class="company companyClose hidden">Company <ion-icon name="chevron-up-outline"></ion-icon></li>
-              <ul class="drop2 hidden">
+              <li class="company companyOpenDesktop">Company <ion-icon name="chevron-down-outline"></ion-icon></li>
+              <li class="company companyCloseDesktop hidden">Company <ion-icon name="chevron-up-outline"></ion-icon></li>
+              <ul class="drop2Desktop hidden">
                 <li><a href="#">History</a></li>
                 <li><a href="#">Our Team</a></li>
                 <li><a href="#">Blog</a></li>
